# ModernTkinterTemplate

./: main.py  pyproject.toml
